# parking-robot

./: README.md  ubuntu2004noetic.sh
Diff_H80_description/: CMakeLists.txt  package.xml
Diff_H80_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
Diff_H80_description/meshes/: wheel_1.stl  wheel_2.stl  wheel_3.stl  wheel_4.stl
Diff_H80_description/urdf/: Diff_H80.gazebo  Diff_H80.trans  Diff_H80.xacro  materials.xacro
Firmware/: platformio.ini
Firmware/src/: main.cpp
diff_H80_description/: CMakeLists.txt  package.xml
diff_H80_description/config/: controller.yaml  urdf.rviz
diff_H80_description/launch/: controller.launch  display.launch  gazebo.launch
diff_H80_description/meshes/: base_link.stl  wheel_1.stl  wheel_2.stl  wheel_3.stl  wheel_4.stl
diff_H80_description/urdf/: diff_H80.gazebo  diff_H80.trans  diff_H80.xacro  materials.xacro
mcu_serial/: CMakeLists.txt  package.xml
mcu_serial/launch/: serial.launch
mcu_serial/scripts/: main.py  ros_thread.py  serial_port.py  subscribe.py
motion_control/: CMakeLists.txt  package.xml
motion_control/include/: subpuber.h
motion_control/launch/: bringup.launch
motion_control/src/: main.cpp  subpuber.cpp
movement_calculation/: CMakeLists.txt  package.xml
movement_calculation/include/: subpuber.h
plate_localization/: CMakeLists.txt  package.xml
plate_localization/include/: plate_localization.h
plate_localization/launch/: D455_848x480.launch  bringup.launch  plate_localization.rviz
plate_localization/src/: main.cpp  plate_localization_node.cpp
(+21 files in other folders)
